// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubHeader matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SubHeader
    classes={
      Object {
        "blue": "blue",
        "center": "center",
        "fixed": "fixed",
        "left": "left",
        "right": "right",
        "subHeader": "subHeader",
        "white": "white",
        "wrapper": "wrapper",
      }
    }
    fixed={false}
    theme="blue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="subHeader blue"
      />,
      "className": "wrapper",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          undefined,
          undefined,
        ],
        "className": "subHeader blue",
      },
      "ref": null,
      "rendered": Array [
        undefined,
        undefined,
        undefined,
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="subHeader blue"
        />,
        "className": "wrapper",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            undefined,
          ],
          "className": "subHeader blue",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          undefined,
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`SubHeader styles matches the snapshot 1`] = `
Object {
  "blue": Object {
    "background": "#1476fb",
    "color": "#ffffff",
  },
  "center": Object {
    "height": "100%",
    "left": "50%",
    "position": "absolute",
    "transform": "translateX(-50%)",
  },
  "fixed": Object {
    "left": "0",
    "position": "fixed",
    "top": "0",
    "width": "100%",
    "zIndex": "10",
  },
  "left": Object {
    "float": "left",
    "height": "100%",
  },
  "right": Object {
    "float": "right",
    "height": "100%",
  },
  "subHeader": Object {
    "boxShadow": "0 6px 5px -3px rgba(0,0,0,0.12), 0 6px 18px 0 rgba(0,29,124,0.08)",
    "fontFamily": "'HK Grotesk', sans-serif",
    "fontSize": "16px",
    "height": "60px",
    "padding": "0 15px",
    "position": "relative",
  },
  "white": Object {
    "background": "#ffffff",
    "color": "#222222",
  },
  "wrapper": Object {
    "height": "60px",
  },
}
`;

exports[`SubHeaderJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(SubHeader)
    fixed={false}
    theme="blue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "blue": "SubHeader-blue-0-1-36",
        "center": "SubHeader-center-0-1-40",
        "fixed": "SubHeader-fixed-0-1-35",
        "left": "SubHeader-left-0-1-38",
        "right": "SubHeader-right-0-1-39",
        "subHeader": "SubHeader-subHeader-0-1-34",
        "white": "SubHeader-white-0-1-37",
        "wrapper": "SubHeader-wrapper-0-1-33",
      },
      "fixed": false,
      "theme": "blue",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "blue": "SubHeader-blue-0-1-36",
          "center": "SubHeader-center-0-1-40",
          "fixed": "SubHeader-fixed-0-1-35",
          "left": "SubHeader-left-0-1-38",
          "right": "SubHeader-right-0-1-39",
          "subHeader": "SubHeader-subHeader-0-1-34",
          "white": "SubHeader-white-0-1-37",
          "wrapper": "SubHeader-wrapper-0-1-33",
        },
        "fixed": false,
        "theme": "blue",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
